# WGPU_PS

./: .gitignore  CMakeLists.txt  main.cpp
WebGPU-distribution-wgpu/include/webgpu/: webgpu.hpp
glfw/include/GLFW/: glfw3.h
glfw/src/: egl_context.c  win32_joystick.c
glm/: CMakeLists.txt
include/: application.h  enums.h  executionTimer.h  massSpring.h  node.h  object.h  physicmanager.h  physicmanagerPBD.h  pipelineData.h  resourceManager.h  simulable.h  spring.h  structs.h
include/Eigen/src/Core/: PlainObjectBase.h
include/Eigen/src/Geometry/: Umeyama.h
include/PBD/: bendGroupPBD.h  massSpringPBD.h  nodePBD.h  physicmanagerPBD.h  simulablePBD.h  springPBD.h
resources/: computeP.wgsl  computeShader.wgsl  computeV.wgsl  pyramid.txt  shader.wgsl
src/: application.cpp  implementations.cpp  massSpring.cpp  node.cpp  object.cpp  physicmanager.cpp  physicmanagerPBD.cpp  pipelineData.cpp  resourceManager.cpp  spring.cpp
src/PBD/: massSpringPBD.cpp  nodePBD.cpp  physicmanagerPBD.cpp
